assert(!defined(zx) || zx != "/",
       "This file can only be used in the Fuchsia GN build.")

import("//build/unification/images/migrated_manifest.gni")

executable("traceroute") {
  configs += [ "//build/unification/config:zircon-migrated" ]
  sources = [ "traceroute.cc" ]
  deps = [
    "//zircon/public/lib/fdio",
    "//zircon/public/lib/pretty",
    "//zircon/system/ulib/inet6",
  ]
}

migrated_manifest("traceroute-manifest") {
  deps = [ ":traceroute" ]
}
